src/objects/Health_Wellness_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Admission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Health Wellness Checklists</relationshipLabel>
        <relationshipName>Health_Wellness_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arthritis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arthritis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asthma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asthma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Checklist</label>
        <referenceTo>Health_Wellness_Checklist__c</referenceTo>
        <relationshipLabel>Health Wellness Checklists</relationshipLabel>
        <relationshipName>Health_Wellness_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_of_Physical__c</fullName>
        <label>Status of Physical</label>
        <picklist>
            <picklistValues>
                <fullName>Preparation for Annual Physical</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Post Annual Physical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Health Wellness Checklist</label>
    <nameField>
        <label>Health Welness Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Wellness Checklists</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>The Standard Checklist Record Type</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>